--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "styled-components": "^6.0.1",
+    "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
   }
 }
