--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "styled-components": "^6.0.1",
@@ -27,6 +28,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/styled-components": "^5.1.26",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
