--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "postcss": "8.4.24",
