--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "recoil": "^0.7.7",
     "styled-components": "^6.0.1",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
