--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
+    "@types/react-slick": "^0.23.10",
+    "@types/slick-carousel": "^1.6.37",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -23,6 +25,8 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.1",
     "swr": "^2.2.0",
