--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "@types/react-slick": "^0.23.10",
+    "@types/recoil": "^0.0.9",
     "@types/slick-carousel": "^1.6.37",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "autoprefixer": "10.4.14",
@@ -26,8 +27,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
     "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.1",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
